Senior_Project/src/senior/project/test/server/errors/ServerInvalidItemException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidItemException extends Exception {

  public ServerInvalidItemException(String msg) {
    super(msg);
  }
}
